prevent double tap zoom on safari

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -143,7 +143,10 @@ h1 {
   border-radius: 8px;
   padding: 0;
   box-sizing: border-box;
-  .generateButtonInner{
+  touch-action: manipulation;
+  user-select: none;
+  .generateButtonInner {
+    touch-action: manipulation;
     box-sizing: border-box;
     color: white;
     display: inline-block;
